// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logo Create a logo with image 1`] = `
<div>
  <div
    class="flex justify-start"
  >
    <a
      class="btn gap-1 btn-ghost normal-case"
      href="/"
    >
      <div
        class="w-6 relative aspect-square"
      >
        <span
          style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
        >
          <img
            alt="logo"
            data-nimg="fill"
            decoding="async"
            src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
            style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
          />
          <noscript />
        </span>
      </div>
      <h1
        class="text-xl font-bold text-base-content"
      >
        Test Logo
      </h1>
      <span
        class="sr-only"
      >
        Logo
      </span>
    </a>
  </div>
</div>
`;

exports[`Logo Create a logo without image 1`] = `
<div>
  <div
    class="flex justify-start"
  >
    <a
      class="btn gap-1 btn-ghost normal-case"
      href="/"
    >
      <h1
        class="text-xl font-bold text-base-content"
      >
        Test Logo
      </h1>
      <span
        class="sr-only"
      >
        Logo
      </span>
    </a>
  </div>
</div>
`;
